Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1273,7 +1273,7 @@ fieldset {
     #profilepic {
         width: 130px;
         margin: 0;
-        order: 7;
+        order: 2;
     }
     /* Skills section large mobile */
     .Skills .container-skill .mainSkill {
